# cen310-midterm-Parlak-CanAhmediYasar

./: 7-build-app-linux.sh  7-build-app-windows.bat  7-build-doc-windows.bat  8-build-test-windows.bat  9-clean-project.bat  CMakeLists.txt  DoxyfileLibLinux  DoxyfileLibWin  DoxyfileTestLinux  DoxyfileTestWin  README.md  astyle-options.txt  mkdocs.yml
docs/: developers.md
docs/coverxygenlibwin/: C__Users_Can_Ahmed_Desktop_cen310_midterm_Parlak_CYasar_src_utility_src_monte_carlo_pi.cpp.html  C__Users_Can_Ahmed_Desktop_cen310_midterm_Parlak_Capp_src_teamManager_header_teamManager.h.html  C__Users_Can_Ahmed_Desktop_cen310_midterm_Parlak_Casar_src_utility_header_monte_carlo_pi.h.html  C__Users_Can_Ahmed_Desktop_cen310_midterm_Parlak_Cc_teamManagerapp_header_teamManagerapp.h.html  C__Users_Can_Ahmed_Desktop_cen310_midterm_Parlak_CdiYasar_src_utility_header_commonTypes.h.html  C__Users_Can_Ahmed_Desktop_cen310_midterm_Parlak_Crapp_src_teamManager_src_teamManager.cpp.html  C__Users_Can_Ahmed_Desktop_cen310_midterm_Parlak_Crc_teamManagerapp_src_teamManagerapp.cpp.html  index.html  lcov_doxygen_lib_win.info  main.js
docs/coverxygentestwin/: C__Users_Can_Ahmed_Desktop_cen310_midterm_Parlak_CYasar_src_tests_utility_utility_test.cpp.html  C__Users_Can_Ahmed_Desktop_cen310_midterm_Parlak_Cc_tests_teamManager_teamManager_test.cpp.html  index.html  lcov_doxygen_test_win.info  main.js
docs/doxygenlibwin/html/: _r_e_a_d_m_e_8md.html  annotated.html  class_coruh_1_1team_manager_1_1team_manager-members.html  class_coruh_1_1team_manager_1_1team_manager.html  classes.html  common_types_8h.html  common_types_8h__incl.md5  common_types_8h_source.html  dir_000008_000004.html  dir_133d476fa6af93cd7a901f2c36223ff5.html  dir_133d476fa6af93cd7a901f2c36223ff5_dep.md5  dir_1cc440524e7f7fca440a2bd4029a9680.html  dir_3d7f64e06db27ebd74b13c86b58eba97.html  dir_3e89a39dc62c08f41d74676c8771741f.html  dir_653f434c0a7d94e45490e96e215a18cc.html  dir_653f434c0a7d94e45490e96e215a18cc_dep.md5  dir_6d758108c1a2fabadf6612e0ed644ce1.html  dir_6d758108c1a2fabadf6612e0ed644ce1_dep.md5  dir_7f0526c149a81b7d83106f4c74e68e40.html  dir_7f0526c149a81b7d83106f4c74e68e40_dep.md5  dir_909f2d8eced2fc0f95c4e73b28a8363b.html  dir_a9a4f1c905590d6f945f0c4c516d0408.html  dir_aae0209e761f1d2607daacf916299098.html  dir_c62dd16f40bcb2f0f64237ed2717e3fc.html  dir_caee31ddf6bf989a36a49ba1db01809b.html  dir_caee31ddf6bf989a36a49ba1db01809b_dep.md5  dir_ec1aea7ecdb501d6bd6b894e2b1baa80.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  monte__carlo__pi_8cpp.html  monte__carlo__pi_8h.html  monte__carlo__pi_8h_source.html  namespace_coruh.html  namespace_coruh_1_1team_manager.html  namespaces.html  team_manager_8cpp.html  team_manager_8cpp__incl.md5  (+7 more)
docs/doxygenlibwin/latex/: _r_e_a_d_m_e_8md.tex  annotated.tex  class_coruh_1_1team_manager_1_1team_manager.tex  common_types_8h.tex  common_types_8h__incl.md5  common_types_8h_source.tex  dir_133d476fa6af93cd7a901f2c36223ff5.tex  dir_3d7f64e06db27ebd74b13c86b58eba97.tex  dir_3d7f64e06db27ebd74b13c86b58eba97_dep.md5  dir_3e89a39dc62c08f41d74676c8771741f.tex  dir_3e89a39dc62c08f41d74676c8771741f_dep.md5  dir_653f434c0a7d94e45490e96e215a18cc.tex  dir_6d758108c1a2fabadf6612e0ed644ce1.tex  dir_7f0526c149a81b7d83106f4c74e68e40.tex  dir_909f2d8eced2fc0f95c4e73b28a8363b.tex  dir_909f2d8eced2fc0f95c4e73b28a8363b_dep.md5  dir_a9a4f1c905590d6f945f0c4c516d0408.tex  dir_aae0209e761f1d2607daacf916299098.tex  dir_c62dd16f40bcb2f0f64237ed2717e3fc.tex  dir_c62dd16f40bcb2f0f64237ed2717e3fc_dep.md5  dir_caee31ddf6bf989a36a49ba1db01809b.tex  dir_ec1aea7ecdb501d6bd6b894e2b1baa80.tex  files.tex  monte__carlo__pi_8cpp.tex  monte__carlo__pi_8h.tex  monte__carlo__pi_8h_source.tex  namespace_coruh.tex  namespace_coruh_1_1team_manager.tex  namespaces.tex  refman.tex  team_manager_8cpp.tex  team_manager_8cpp__incl.md5  team_manager_8h.tex  team_manager_8h__dep__incl.md5  team_manager_8h__incl.md5  team_manager_8h_source.tex  team_managerapp_8cpp.tex  team_managerapp_8h.tex  team_managerapp_8h_source.tex
docs/doxygenlibwin/rtf/: class_coruh_1_1team_manager_1_1team_manager__coll__graph.md5  common_types_8h__incl.md5  dir_133d476fa6af93cd7a901f2c36223ff5.rtf  dir_1cc440524e7f7fca440a2bd4029a9680.rtf  dir_1cc440524e7f7fca440a2bd4029a9680_dep.md5  dir_3d7f64e06db27ebd74b13c86b58eba97.rtf  dir_3e89a39dc62c08f41d74676c8771741f.rtf  dir_653f434c0a7d94e45490e96e215a18cc.rtf  dir_6d758108c1a2fabadf6612e0ed644ce1.rtf  dir_7f0526c149a81b7d83106f4c74e68e40.rtf  dir_909f2d8eced2fc0f95c4e73b28a8363b.rtf  dir_a9a4f1c905590d6f945f0c4c516d0408.rtf  dir_a9a4f1c905590d6f945f0c4c516d0408_dep.md5  dir_aae0209e761f1d2607daacf916299098.rtf  dir_aae0209e761f1d2607daacf916299098_dep.md5  dir_c62dd16f40bcb2f0f64237ed2717e3fc.rtf  dir_caee31ddf6bf989a36a49ba1db01809b.rtf  dir_ec1aea7ecdb501d6bd6b894e2b1baa80.rtf  refman.rtf  team_manager_8cpp__incl.md5  team_manager_8h__dep__incl.md5  team_manager_8h__incl.md5
docs/doxygenlibwin/xml/: Doxyfile.xml  _r_e_a_d_m_e_8md.xml  class_coruh_1_1team_manager_1_1team_manager.xml  common_types_8h.xml  dir_133d476fa6af93cd7a901f2c36223ff5.xml  dir_1cc440524e7f7fca440a2bd4029a9680.xml  dir_3d7f64e06db27ebd74b13c86b58eba97.xml  dir_3e89a39dc62c08f41d74676c8771741f.xml  dir_653f434c0a7d94e45490e96e215a18cc.xml  dir_6d758108c1a2fabadf6612e0ed644ce1.xml  dir_7f0526c149a81b7d83106f4c74e68e40.xml  dir_a9a4f1c905590d6f945f0c4c516d0408.xml  index.xml  (+12 more)
report_doc_lib_hist_win/: 2025-04-11_00-22-10_CoverageHistory.xml  2025-04-11_00-31-48_CoverageHistory.xml
report_doc_test_hist_win/: 2025-04-11_00-22-10_CoverageHistory.xml  2025-04-11_00-31-49_CoverageHistory.xml
src/: namespaces.dox
src/app/: MainForm.h  monte_carlo_pi_app.cpp
src/lib/: monte_carlo_pi.cpp  monte_carlo_pi.h
src/teamManagerapp/: CMakeLists.txt
src/tests/: CMakeLists.txt  monte_carlo_pi_test.cpp
src/tests/teamManager/: CMakeLists.txt  teamManager_test.cpp
src/tests/utility/: utility_test.cpp
src/utility/: CMakeLists.txt
(+110 files in other folders)
